--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:background="@color/white"
         android:layout_height="wrap_content"
-        tools:context=".dashboard.fragments.DietFragment">
+        tools:context=".dashboard.homeDiet.DietFragment">
 
 
     <androidx.core.widget.NestedScrollView
@@ -501,6 +501,57 @@
 
                         <Button
                             android:id="@+id/btn_create_workout"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_marginTop="@dimen/margin_16dp"
+                            android:background="@drawable/btn_bg"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="@dimen/dimen_20"
+                            android:fontFamily="@font/avenir_roman"
+                            android:paddingStart="@dimen/margin_4dp"
+                            android:paddingTop="@dimen/margin_12dp"
+                            android:paddingEnd="@dimen/margin_4dp"
+                            android:paddingBottom="@dimen/margin_12dp"
+                            android:layout_marginStart="@dimen/dimen_110"
+                            android:layout_marginEnd="@dimen/dimen_110"
+                            android:text="@string/create_workout"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"
+                            android:textAllCaps="false"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/lnrOnRest"
+                        android:orientation="vertical"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:layout_marginTop="@dimen/dimen_100"
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:layout_marginTop="@dimen/margin_8dp"
+                            android:src="@drawable/rest"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/dimen_180">
+                        </ImageView>
+
+                        <TextView
+                            android:id="@+id/tv_no_onRest_workout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:textAlignment="center"
+                            android:text="@string/am_on_rest"
+                            android:fontFamily="@font/avenir_black"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="@dimen/font_12sp" />
+
+                        <Button
+                            android:id="@+id/btn_create_rest_workout"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_marginTop="@dimen/margin_16dp"
