--- a/app/src/main/res/layout/row_detail_fitness_center.xml
+++ b/app/src/main/res/layout/row_detail_fitness_center.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/rltCenter"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/dimen_35"
@@ -14,8 +14,7 @@
         android:background="@drawable/rect_unselected_fitness_center"
         android:elevation="@dimen/dimen_3"
         android:paddingEnd="@dimen/dimen_25"
-        android:paddingStart="@dimen/dimen_25"
-        tools:ignore="RtlSymmetry">
+        android:paddingStart="@dimen/dimen_25">
 
         <TextView
             android:id="@+id/tvFitnessCenterName"
@@ -23,12 +22,13 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="Al Badr"
+            android:layout_gravity="center"
             android:fontFamily="@font/avenir_black"
             android:textSize="@dimen/font_12sp"
             android:layout_centerInParent="true"
             android:textAlignment="center"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
 
