--- a/app/src/main/res/layout/row_my_meal_type_diet.xml
+++ b/app/src/main/res/layout/row_my_meal_type_diet.xml
@@ -1,24 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-        <variable
-            name="myDietModel"
-            type="com.htf.diva.models.MealType" />
-        <import type="android.view.View"/>
-    </data>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_16dp"
-        android:layout_marginEnd="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_12dp"
-        android:layout_marginBottom="@dimen/margin_4dp"
-        android:padding="@dimen/dimen_7"
-        android:elevation="@dimen/dimen_1"
-        android:orientation="vertical"
-        android:background="@drawable/meal_type_rect_bg">
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="@dimen/margin_16dp"
+    android:layout_marginEnd="@dimen/margin_16dp"
+    android:layout_marginTop="@dimen/margin_12dp"
+    android:layout_marginBottom="@dimen/margin_4dp"
+    android:padding="@dimen/dimen_7"
+    android:elevation="@dimen/dimen_1"
+    android:orientation="vertical"
+    android:background="@drawable/meal_type_rect_bg"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 
         <LinearLayout
@@ -27,7 +19,7 @@
             android:orientation="horizontal">
 
             <com.github.siyamed.shapeimageview.RoundedImageView
-                android:id="@+id/ivTrainerImage"
+                android:id="@+id/ivMealType"
                 android:layout_width="@dimen/dimen_50"
                 app:siBorderColor="@color/white"
                 android:layout_height="@dimen/dimen_50"
@@ -43,9 +35,9 @@
                 android:padding="@dimen/dimen_5">
 
                 <TextView
+                    android:id="@+id/tvDietName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    userName="@{myDietModel.name}"
                     android:textSize="@dimen/font_13sp"
                     android:textColor="@color/colorPrimaryDark"
                     android:fontFamily="@font/avenir_black" />
@@ -68,5 +60,4 @@
     </LinearLayout>
 
 
-</layout>
 
