working on diet plan

--- a/app/src/main/res/layout/activity_center_detail_booking.xml
+++ b/app/src/main/res/layout/activity_center_detail_booking.xml
@@ -9,7 +9,6 @@
     </data>
 
     <RelativeLayout
-
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -303,7 +302,7 @@
         <LinearLayout
             android:id="@+id/lnrBookSlots"
             android:orientation="vertical"
-            android:visibility="visible"
+            android:visibility="gone"
             android:background="@color/white"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
