--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:background="@color/white"
         android:layout_height="wrap_content"
-        tools:context=".dashboard.homeDiet.DietFragment">
+        tools:context=".dashboard.homeDietPlan.DietFragment">
 
 
     <androidx.core.widget.NestedScrollView
